--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,4 @@ CLOUDINARY_KEY=399657634519239
 CLOUDINARY_SECRET= 6TdZv0RRuhCtqCG9GZ5Un_ulZP0
 TEST_MONGO_URI=mongodb://localhost:27017/sweet-shop-test
 
+FRONTEND=http://localhost:5173
