--- a/frontend/.env
+++ b/frontend/.env
@@ -7,4 +7,4 @@ CLOUDINARY_NAME=doxrkwusn
 CLOUDINARY_KEY=399657634519239
 CLOUDINARY_SECRET= 6TdZv0RRuhCtqCG9GZ5Un_ulZP0
 TEST_MONGO_URI=mongodb://localhost:27017/sweet-shop-test
-VITE_API_URL=https://sweetshop-lk4l.onrender.com
+VITE_API_URL=https://sweetshop-lk4l.onrender.com/api
